# linear-regression

./: .gitignore  CMakeLists.txt  README.MD  base64  linear_regression.cbp
include/: matplotlibcpp.h
src/: CSV.cpp  CSV.h  Data.cpp  Data.h  ex1a.cpp  ex1a.h  ex1b.cpp  ex1b.h  ex2a.cpp  ex2a.h  ex2b.cpp  ex2b.h  ex3a.cpp  ex3a.h  main.cpp  matplotlib.h  matplotlibcpp.h  utils.cpp  utils.h  vtkBetterChartXYZ.cpp  vtkBetterChartXYZ.h
